# composition

./: Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: compile-check.yml  default-config-check.yml
src/: config.rs  lib.rs  main.rs  settings.rs
src/app_context/: cli.rs  mod.rs
src/app_context/config/: default.rs
src/config/: mod.rs
src/context/: cli.rs  mod.rs
src/context/config/: default.rs  mod.rs
src/core/: get_all_entries.rs  get_composition.rs  mod.rs
src/display/: mod.rs  spinner.rs
src/settings/: cli.rs  ignore.rs  ignored.rs  mod.rs  tracked.rs
