[package]
name = "composition-cli"
version = "2.0.2"
edition = "2024"
authors = ["lalitm1004 <lalitm1004@gmail.com>"]
readme = "README.md"
repository = "https://github.com/lalitm1004/composition"
keywords = ["cli", "composition", "code-analysis"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "composition"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
ignore = "0.4.23"
rayon = "1.11.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.7"
walkdir = "2.5.0"
